Apply rule "Prefer java.util.List.of(Object)"