@@ -149,7 +149,7 @@ public class HokkaidoJapanRailwayKanjiHiraganaMapFactoryBean extends StringMapFr
 				//
 			} // for
 				//
-			return Objects.equals(Collections.singletonList(unicodeBlock), unicodeBlocks);
+			return Objects.equals(List.of(unicodeBlock), unicodeBlocks);
 			//
 		} // if
 			//
