@@ -214,9 +214,9 @@ class OtoYakuNoHeyaYomikataJitenMintetsuYomikataJitenMultimapFactoryBeanTest {
 		//
 		Assertions.assertNull(getUnicodeBlocks(null));
 		//
-		Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
+		Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
 		//
-		Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks("  "));
+		Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks("  "));
 		//
 	}
 
