@@ -212,7 +212,7 @@ class OtoYakuNoHeyaYomikataJitenMukashiNoShokugyouNoJitenMultimapFactoryBeanTest
 		//
 		if (!isSystemPropertiesContainsTestGetObject) {
 			//
-			Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
+			Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
 			//
 		} // if
 			//
