@@ -187,9 +187,9 @@ class OtoYakuNoHeyaYomikataJitenTennoYomikataJitenMultimapFactoryBeanTest {
 		//
 		Assertions.assertNull(getUnicodeBlocks(null));
 		//
-		Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
+		Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(" "));
 		//
-		Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks("  "));
+		Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks("  "));
 		//
 	}
 
