@@ -7,6 +7,7 @@ import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -189,8 +190,7 @@ class RyutetsuKanjiHiraganaMapFactoryBeanTest {
 		//
 		Assertions.assertNull(getUnicodeBlocks(null));
 		//
-		Assertions.assertEquals(Collections.singletonList(UnicodeBlock.BASIC_LATIN),
-				getUnicodeBlocks(new char[] { ' ' }));
+		Assertions.assertEquals(List.of(UnicodeBlock.BASIC_LATIN), getUnicodeBlocks(new char[] { ' ' }));
 		//
 	}
 
@@ -344,7 +344,11 @@ class RyutetsuKanjiHiraganaMapFactoryBeanTest {
 	@Test
 	void testCreateMap() throws Throwable {
 		//
-		Assertions.assertNull(createMap(Collections.singletonList(null)));
+		final List<?> list = new ArrayList<>();
+		//
+		Util.add(list, null);
+		//
+		Assertions.assertNull(createMap(list));
 		//
 	}
 
