@@ -15,6 +15,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
@@ -561,7 +562,7 @@ class MapReportGuiTest {
 		//
 		Assertions.assertNull(getValues(beanFactory, null, strings));
 		//
-		Assertions.assertEquals(Collections.singletonList(ih != null ? ih.bean = Map.of() : null),
+		Assertions.assertEquals(List.of(ih != null ? ih.bean = Map.of() : null),
 				getValues(beanFactory, Map.class, strings));
 		//
 	}
